# open-network-solver

./: .gitignore  LICENSE  README.md  package-lock.json  renovate.json
docs/: architecture.md
docs/runbooks/: local-operations.md
infra/: .env.example  .gitignore  README.md  docker-compose.yml
infra/etl/: Dockerfile  drop_old_routing.sql  load_osm.py  load_osm.sh  mapconfig.xml  requirements.txt  routing.lua  speed_tags.py  swap_schema.sql
infra/etl/sql/: 01_node_network.sql  02_cost_columns.sql  03_facilities.sql
infra/grafana/dashboards/: routing.json
infra/postgres-init/: 01_create_extensions.sh
infra/prometheus/: prometheus.yml
open-routing-service/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
open-routing-service-ui/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
open-routing-service-ui/.tsbuild-node/: playwright.config.js  tsconfig.node.tsbuildinfo  vite.config.js  vitest.config.js
open-routing-service-ui/src/: App.tsx  main.tsx  vite-env.d.ts
open-routing-service-ui/src/api/: closestFacilityClient.ts  index.ts  nominatimClient.ts  photonGeocoderApi.ts
open-routing-service-ui/src/components/: index.ts
open-routing-service-ui/src/hooks/: index.ts  useMapLibre.ts
open-routing-service-ui/src/store/: index.ts  searchStore.ts
open-routing-service-ui/src/styles/: globals.css
open-routing-service-ui/src/types/: routing.ts
open-routing-service-ui/src/utils/: categoryIcon.ts  rankColors.ts  units.ts
open-routing-service-ui/tests/: setup.ts
open-routing-service-ui/tests/components/: AddressSearch.test.tsx  BufferDistanceInput.test.tsx  FacilityCountInput.test.tsx  FacilityTypeSelect.test.tsx  GeocoderControl.test.tsx  ResultsList.test.tsx  RunbookBadge.test.tsx
open-routing-service-ui/tests/e2e/: closest-facility.spec.ts  facility-enrichment.spec.ts  fixture-server.ts  geocoder.spec.ts  smoke.spec.ts
open-routing-service/alembic/: env.py  script.py.mako
open-routing-service/alembic/versions/: 20260620_0001_baseline_etl_runs_function_version.py  20260622_0001_phase2_facilities.py  20260622_0002_phase2_cost_columns.py  20260622_0003_phase2_closest_facility.py  20260622_0004_phase2_fix_closest_facility_format.py  20260622_0005_phase2_fix_closest_facility_ambiguity.py  20260622_0006_phase2_fix_closest_facility_aggregation.py  20260623_0001_scalable_bbox_oneway_closest_facility.py  20260623_0002_facility_bbox_prefilter_closest_facility.py  20260623_0003_facility_attributes_category_closest_facility.py  20260623_0004_facility_categories_summary_table.py
open-routing-service/src/open_routing_service/: __init__.py  errors.py  main.py
open-routing-service/src/open_routing_service/api/: __init__.py  deps.py  etl_status.py  health.py  metrics.py  routing.py
open-routing-service/src/open_routing_service/cache/: __init__.py  closest_facility_cache.py
open-routing-service/src/open_routing_service/config/: __init__.py  settings.py
open-routing-service/src/open_routing_service/models/: __init__.py  api.py  db_base.py  etl_runs.py  facilities.py  function_version.py
open-routing-service/src/open_routing_service/observability/: __init__.py  logging_config.py  metrics.py  request_id.py
open-routing-service/src/open_routing_service/repositories/: __init__.py  routing_repo.py
open-routing-service/src/open_routing_service/services/: __init__.py  closest_facility_service.py
open-routing-service/tests/: __init__.py  conftest.py
open-routing-service/tests/fixtures/network-tiny/: seed.sql
open-routing-service/tests/integration/: __init__.py  conftest.py  test_node_network.py  test_phase1_etl.py  test_phase2_routing.py  test_phase3_http.py
open-routing-service/tests/load/: closest_facility.k6.js
open-routing-service/tests/unit/: __init__.py  test_api_models.py  test_baseline_migration.py  test_cache.py  test_etl_orchestrator.py  test_facility_details.py  test_lifespan_shutdown.py  test_phase2_closest_facility.py  test_request_id_middleware.py  test_routing_lua.py  test_service.py  test_speed_tags.py
scripts/: spike-oq1.ps1
(+28 files in other folders)
